--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ before_script:
   - sudo apt-get install libboost-test-dev -y
   - sudo apt-get install cmake
   - cmake .
+  - cmake --build .
   - cmake --build . --target test
   - cmake --build . --target package
