--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ script:
     - cmake --build .
     - cmake --build . --target test
     - cmake --build . --target package
+    - curl -T cmake_ci-0.0.${TRAVIS_BUILD_NUMBER}-Linux.deb -ultaa:5507fb3cb5835ea13b39b18546f71c638549455e https://api.bintray.com/content/ltaa/ltaa_cpp/cmake_ci/-0.0.${TRAVIS_BUILD_NUMBER}/otus
