--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ target_link_libraries(${PROJECT_NAME}
 SET(CPACK_GENERATOR DEB)
 SET(CPACK_PACKAGE_VERSION_MAJOR "0")
 SET(CPACK_PACKAGE_VERSION_MINOR "0")
-SET(CPACK_PACKAGE_VERSION_PATCH "1")
+SET(CPACK_PACKAGE_VERSION_PATCH ${TRAVIS_BUILD_NUMBER})
 SET(CPACK_DEBIAN_PACKAGE_MAINTAINER shinobispb@gmail.com)
 
 
