--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,7 @@ script:
     - ls -la
 
 deploy:
-  - skip_cleanup: true
-  - curl -T cmake_ci-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ultaa:5507fb3cb5835ea13b39b18546f71c638549455e https://api.bintray.com/content/ltaa/ltaa_cpp/cmake_ci/-0.0.${TRAVIS_BUILD_NUMBER}/otus
+  provider: script
+  skip_cleanup: true
+  script:
+    - curl -T cmake_ci-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ultaa:5507fb3cb5835ea13b39b18546f71c638549455e https://api.bintray.com/content/ltaa/ltaa_cpp/cmake_ci/-0.0.${TRAVIS_BUILD_NUMBER}/otus
