init travis script#9

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.2)
 
-project(cmake_ci)
+project(cmake_ci VERSION 0.0.${TRAVIS_BUILD_NUMBER})
 add_executable(${PROJECT_NAME} "main.cpp")
 
 add_library(hello "hello.cpp")
@@ -34,8 +34,8 @@ target_link_libraries(${PROJECT_NAME}
 
 
 SET(CPACK_GENERATOR DEB)
-SET(CPACK_PACKAGE_VERSION_MAJOR "0")
-SET(CPACK_PACKAGE_VERSION_MINOR "0")
+SET(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
+SET(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
 SET(CPACK_PACKAGE_VERSION_PATCH ${TRAVIS_BUILD_NUMBER})
 SET(CPACK_DEBIAN_PACKAGE_MAINTAINER shinobispb@gmail.com)
 
