--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ deploy:
   on:
     all_branches: true
   script:
-    - curl -T cmake_ci-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ultaa:5507fb3cb5835ea13b39b18546f71c638549455e https://api.bintray.com/content/ltaa/ltaa_cpp/otus_hello/0.0.${TRAVIS_BUILD_NUMBER}/cmake_ci-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64
+    - curl -T cmake_ci-0.0.${TRAVIS_BUILD_NUMBER}-Linux.deb -ultaa:5507fb3cb5835ea13b39b18546f71c638549455e "https://api.bintray.com/content/ltaa/hello/otus_hello/0.0.${TRAVIS_BUILD_NUMBER}/cmake_ci-0.0.${TRAVIS_BUILD_NUMBER}-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
