--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ target_link_libraries(${PROJECT_NAME}
     )
 
 
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
 
 SET(CPACK_GENERATOR DEB)
 SET(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
