adding travis config#0

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: cpp
-compuler: clang
+compiler:
+- clang
 before_script:
 - sudo apt-get install libboost-test-dev -y
 - sudo apt-get install cmake
