fix cmake install config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
     )
 
 
-install(TARGETS $PROJECT_NAME RUNTIME DESTINATION bin)
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
 
 
 set(CPACK_GENERATOR "DEB")
